[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "wretchedfrankcontrolflowgraph"
version = "0.1.0"
[tool.poetry.dependencies]
pgzero = "^1.2"
python = "^3.8"
[tool.poetry.dev-dependencies]
